--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
     <script src="JS/main.js"></script>
   </head>
   <body>
+    <h2><font color="silver" face="Lobster"><u> Special Relativity </u></h2></p>
+				<h4 id="srans"> Try seeing how speed affects time! Answer will be in seconds. </h4></font>
+			<p> 	t (Unit: s)<input type="text" id="time1"><br>
+				V (Unit: m/s)<input type="text" id="vel"><br>
+				c (Value: 299,792,458)<input type="text" id="light1"><br>
+			<button onclick="calcR()">Calculate Special Relativity</button></p>
   </body>
 </html>
