--- a/index.html
+++ b/index.html
@@ -4,5 +4,14 @@
     <script src="JS/main.js"></script>
   </head>
   <body>
+    <p><font color="orange" size="5">Current Time on Mars:
+				<span id="hour" style="color:black;">??</span>
+				<span id="hid1" style="color:white;">:</span>
+				<span id="min" style="color:black;">??</span>
+				<span id="hid2" style="color:white;">:</span>
+				<span id="sec" style="color:black;">??</span>
+			</font>
+			</p>
+			<p><button onclick=update()>Reveal Martian Time</button></p>
   </body>
 </html>
