--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 				V (Unit: m/s)<input type="text" id="vel"><br>
 				c (Value: 299,792,458)<input type="text" id="light1"><br>
 			<button onclick="calcR()">Calculate Special Relativity</button></p>
+	<!--output should be false -->
+	<p id="operator1"></p>
   </body>
 </html>
