--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="JS/main.js"></script>
-    <style src="CSS/main.cs"></script>
+    <style src="CSS/main.cs"></style>
   </head>
   <body>
   </body>
