--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
   <head>
     <script src="JS/main.js"></script>
-    <style src="CSS/main.cs"></style>
   </head>
   <body>
+    <p id="conca"></p>
+<button onclick="fsen()">Click</button>
+<p id="slice"></p>
+<button onclick="sliceR()">Click</button>
+<p id="string"></p>
+<button onclick="stringM()">Click</button>
+<p id="price"></p>
+<button onclick="priceM()">Click</button>
   </body>
 </html>
