--- a/index.html
+++ b/index.html
@@ -22,6 +22,41 @@
 				<td id="lightX" style="background-color:yellow;"></td>
 			</tr>
 		</table>
+		<h3 style="color: blue;"> Galaxies in The Local Group </h3>
+	<table>
+		<tr>
+			<th id="titles0" style="background-color:magenta;"></th>
+			<th id="titles1" style="background-color:magenta;"></th>
+		</tr>
+		<tr>
+			<td style="background-color:black;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjjYkqQt8FYSe9WOQ6zo82w2eJoNE070W0NQ&usqp=CAU" width="350" height="350" alt="The Milky Way"></td>
+			<td style="background-color:black;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVs_pCKVTZX2iJG1k0Dfa_TA9bD3n7xyZLEw&usqp=CAU" width="350" height="350" alt="Andromeda"></td>
+		</tr>
+		<tr>
+			<td id="mway" style="background-color:blue;"></td>
+			<td id="andro" style="background-color:blue;"></td>
+		</tr>
+		<tr>
+			<td><input class="inputB" type="button" value="Information on the Galaxy in this image!" onclick="g1click()"></td>
+			<td><input class="inputB" type="button" value="Information on the Galaxy in this image!" onclick="g2click()"></td>
+		</tr>
+		<tr>
+			<th id="titles2" style="background-color:magenta;"></th>
+			<th id="titles3" style="background-color:magenta;"></th>
+		</tr>
+		<tr>
+			<td style="background-color:black;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGGbBKclja7peiT03c8pykt4xDx1aYr24IKA&usqp=CAU" width="350" height="350" alt="Triangulum Galaxy"></td>
+			<td style="background-color:black;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTH71mpDiAapdROGtROnh7N4FY2m9D2R-f3bQ&usqp=CAU" width="350" height="350" alt="NGC 6822"></td>
+		</tr>
+		<tr>
+			<td id="trig" style="background-color:blue;"></td>
+			<td id="ngc" style="background-color:blue;"></td>
+		</tr>
+		<tr>
+			<td><input class="inputB" type="button" value="Information on the Galaxy in this image!" onclick="g3click()"></td>
+			<td><input class="inputB" type="button" value="Information on the Galaxy in this image!" onclick="g4click()"></td>
+		</tr>
+	</table>
 	<p id="planetsN"></p>
 	<input type="button" onclick="planets()">
 </body>
