--- a/PizzaMenu/index.html
+++ b/PizzaMenu/index.html
@@ -1,1 +1,47 @@
+<!Doctype html>
+<html>		
+<head>
+	<title> Pizza </title>
+	<script src="JS/main.js"></script>
+	<style src="CSS/main.css"></style>
+</head>
+<body>
+	<div id="menuA">
+		<h1 style="margin:0px 0px 0px 20px;"> Pizza Menu </h1>
+		<input id="inputB" type="button" onclick="receipt()" value="Place Order">
+		<form id="menuF">
+			<div class="menuL">
+				<h3>Size:</h3>
+				<input class="size" type="radio" name="Size" value="Personal Pizza">Personal Pizza<br>
+				<input class="size" type="radio" name="Size" value="Medium Pizza">Medium Pizza<br>
+				<input class="size" type="radio" name="Size" value="Four Corner Pizza">Four Corner Pizza<br>
 
+				<input class="size" type="radio" name="Size" value="Large Pizza">Large Pizza<br>
+				<input class="size" type="radio" name="Size" value="Extra Large Pizza">Extra Large Pizza<br>
+			</div>
+			<div class="menuM">
+				<h3>Vegetables:</h3>
+				<input class="vegs" type="checkbox" name="Topping" value="Tomatoes">Tomatoes<br>
+				<input class="vegs" type="checkbox" name="Topping" value="Olives">Olives<br>
+				<input class="vegs" type="checkbox" name="Topping" value="Peppers">Peppers<br>
+				<input class="vegs" type="checkbox" name="Topping" value="Onions">Onions<br>
+			</div>
+			<div class="menuR">
+				<h3>Meats:</h3>
+				<input class="toppings" type="checkbox" name="Topping" value="Pepperoni">Pepperoni<br>
+				<input class="toppings" type="checkbox" name="Topping" value="Sausage">Sausage<br>
+				<input class="toppings" type="checkbox" name="Topping" value="Bacon">Bacon<br>
+				<input class="toppings" type="checkbox" name="Topping" value="Beef">Beef<br>
+				<input class="toppings" type="checkbox" name="Topping" value="Pineapple">Pineapple<br>
+				<input class="toppings" type="checkbox" name="Topping" value="Ham">Ham<br>
+				<input class="toppings" type="checkbox" name="Topping" value="Chicken">Chicken<br>
+
+			</div>
+			<div id="menuC">
+				<div id="showT"></div>
+				<div id="price"></div>
+			</div>
+		</form>
+	</div>
+</body>
+</html>
